# study.ffmpeg

./: CMakeLists.txt  CMakePresets1.json  README.md  ff_capture.h  ff_decoder.h  ff_encoder.h  ff_grab.hpp  ffmpeg.hpp  rowcross2rowblock.cpp  test1.cpp  test_decode.cpp  test_encode.cpp  test_glog.cpp  test_sti_read.cpp  video_in_pcm.cpp
demo/: CMakeLists.txt  tcp_demo.cpp
docs/: ffmpeg usage.md
ffexamples/: CMakeLists.txt  avio_http_serve_files.c  avio_reading.c  decode_audio.c  decode_video.c  demuxing_decoding.c  encode_audio.c  filter_audio.c  filtering_audio.c  muxing.c  resampling_audio.c  transcode_aac.c  transcoding.c
ffplayer-main/: CMakeLists.txt
ffplayer-main/include/: audio_decoder.h  context.h  decoder.h  frame.h  frame_queue.h
ffplayer-main/src/: audio_decoder.cpp  video_decoder.cpp
fftools/: Makefile  cmdutils.c  cmdutils.h  config.h  config_components.h  ffmpeg.c  ffmpeg.h  ffmpeg_dec.c  ffmpeg_demux.c  ffmpeg_enc.c  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_mux.c  ffmpeg_mux.h  ffmpeg_mux_init.c  ffmpeg_opt.c  ffmpeg_sched.c  ffmpeg_sched.h  ffmpeg_utils.h  ffplay.c  ffplay_renderer.c  ffplay_renderer.h  ffprobe.c  fopen_utf8.h  objpool.c  objpool.h  opt_common.c  opt_common.h  sync_queue.c  sync_queue.h  thread_queue.c  thread_queue.h
qtexamples/: .clang-format  .gitignore  CMakeLists.txt  FfplayWidget.cpp  FfplayWidget.h  README.md  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoOutput.cpp  VideoOutput.h  VideoRecvTest.cpp  VideoRecvTest.ui  VideoSampleDialog.h  VideoSendTest.cpp  VideoSendTest.h  cfte_video_fmt1.hpp  ff_capture.h  ff_decoder.h  ff_encoder.h  ffmpeg.hpp  logo.rc  test_decode.cpp  test_encode.cpp  test_ffmpeg.cpp  test_grab.cpp  test_grab2.cpp  test_grab3.cpp  test_grab4.cpp  test_recv.cpp  test_recv_fmt1.cpp  test_ts_decode.cpp  test_yuv2ts.cpp  ts_decode.hpp  ts_encode.hpp
qtexamples/VideoRecv/: CMakeLists.txt  Frame.h  MainWin.cpp  MainWin.h  MainWin.ui  SplitFrame.h  VideoTestMain.cpp  main.cpp  sti_reader.h  sti_reader_coro.h
qtexamples/VideoRecvTest2/: CMakeLists.txt  MainWin.cpp  MainWin.h  MainWin.ui  VideoTestMain.cpp
qtexamples/VideoSend/: CMakeLists.txt  VideoSampleDialog.cpp  VideoSendTest.cpp  VideoSendTest.h  VideoSendTest.ui
qtexamples/sti/: CMakeLists.txt  cortex_mon_client.cpp  cortex_mon_client.h  cortex_sti_parser.cpp  cortex_sti_parser.h  cortex_time.h  cortex_tm_client.cpp  cortex_tm_client.h  cortex_tm_parser.cpp  cortex_tm_parser.h  lockfree_spsc_queue.h  rpc_server.cpp  rpc_server.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tm_server.cpp  tm_server.h  tm_thread.cpp  tm_thread.h
test/: 16x268.bat
