file(GLOB_RECURSE SRCS "*.cpp" "*.h" "*.ui")
add_executable(TestVideoRecv ${SRCS} logo.rc logo.qrc)
#target_link_libraries(TestVideoRecv PRIVATE Qt::Widgets sti avcodec avformat avutil swscale )
target_include_directories(TestVideoRecv PRIVATE ${FFMPEG_INCLUDE_DIRS})
target_link_directories   (TestVideoRecv PRIVATE ${FFMPEG_LIBRARY_DIRS})
target_link_libraries     (TestVideoRecv PRIVATE ${FFMPEG_LIBRARIES} sti Qt::Widgets Qt::Network)
set_target_properties     (TestVideoRecv PROPERTIES LINK_FLAGS /SUBSYSTEM:CONSOLE)
set_target_properties     (TestVideoRecv PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE")
set_target_properties     (TestVideoRecv PROPERTIES COMPILE_DEFINITIONS_DEBUG "_CONSOLE")
